<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <DUT Name="ST_DeviceStateTable" Id="{830c1fc3-23fe-079a-0506-7ef60033fa55}">
    <Declaration><![CDATA[TYPE ST_DeviceStateTable :
STRUCT
	iDeviceID:DINT;
	iStateID:DINT;
	rTargetPosition: REAL;
	rTolerance: REAL;
	rTransmission: REAL;
	iBeamClass : DINT;
	rPhotonEnergy: REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>